@@ -1,3 +1,8 @@
+2006-12-29  Andy Buckley  <andy@insectnation.org>
+
+	* Added a fix to the Point.arc method to deal with the sign
+	ambiguity when the end points are purely vertically separated.
+
 2006-12-23  Andy Buckley  <andy@insectnation.org>
 
 	* Added distutils setup.py installation script.
